--- a/Desarrollo/appsettings.json
+++ b/Desarrollo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TrabajadoresConnection": "Server=STD;Database=TrabajadoresPrueba;Trusted_Connection=True;TrustServerCertificate=True;"
+    "TrabajadoresConnection": "Server=STD;Database=TrabajadoresPrueba;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
   }
 }
